train.yaml: set logger as tensorboard, and seed as 72

--- a/.gitignore
+++ b/.gitignore
@@ -133,10 +133,6 @@ dmypy.json
 # output folders
 ./models
 
-
 # temporary test files
-test.py
-test.ipynb
-lightning_logs/
-dataset/
-saved_models/
+data/
+logs/
